@startuml Database_ER_Diagram

title TonyPi Robot Monitoring System - Database Schema (PostgreSQL)
footer Entity-Relationship Diagram for SQL Tables

skinparam linetype ortho
skinparam class {
    BackgroundColor #FFFACD
    BorderColor #8B4513
}

entity "users" as users {
    * **id** : VARCHAR <<PK>>
    --
    * username : VARCHAR(50) <<UNIQUE>>
    * email : VARCHAR(100) <<UNIQUE>>
    * password_hash : VARCHAR
    role : VARCHAR [viewer]
    is_active : BOOLEAN [true]
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "robots" as robots {
    * **id** : SERIAL <<PK>>
    --
    * robot_id : VARCHAR <<UNIQUE>>
    * name : VARCHAR(100)
    description : VARCHAR(500)
    location : JSON
    status : VARCHAR(20) [offline]
    ip_address : VARCHAR(50)
    camera_url : VARCHAR(200)
    battery_threshold_low : FLOAT [20.0]
    battery_threshold_critical : FLOAT [10.0]
    temp_threshold_warning : FLOAT [70.0]
    temp_threshold_critical : FLOAT [80.0]
    settings : JSON
    last_seen : TIMESTAMP
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
    is_active : BOOLEAN [true]
}

entity "alerts" as alerts {
    * **id** : SERIAL <<PK>>
    --
    robot_id : VARCHAR <<FK>>
    * alert_type : VARCHAR(50)
    * severity : VARCHAR(20)
    * title : VARCHAR(200)
    message : TEXT
    source : VARCHAR(100)
    value : FLOAT
    threshold : FLOAT
    acknowledged : BOOLEAN [false]
    acknowledged_by : VARCHAR
    acknowledged_at : TIMESTAMP
    resolved : BOOLEAN [false]
    resolved_at : TIMESTAMP
    details : JSON
    * created_at : TIMESTAMP
}

entity "alert_thresholds" as alert_thresholds {
    * **id** : SERIAL <<PK>>
    --
    robot_id : VARCHAR <<FK>>
    * metric_type : VARCHAR(50)
    warning_threshold : FLOAT
    critical_threshold : FLOAT
    is_active : BOOLEAN [true]
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "reports" as reports {
    * **id** : SERIAL <<PK>>
    --
    * title : VARCHAR(200)
    * report_type : VARCHAR(50)
    content : TEXT
    robot_id : VARCHAR <<FK>>
    generated_by : VARCHAR
    file_path : VARCHAR
    * created_at : TIMESTAMP
}

entity "jobs" as jobs {
    * **id** : VARCHAR <<PK>>
    --
    * name : VARCHAR(100)
    * job_type : VARCHAR(50)
    schedule : VARCHAR(100)
    robot_id : VARCHAR <<FK>>
    status : VARCHAR(20) [pending]
    parameters : JSON
    last_run : TIMESTAMP
    next_run : TIMESTAMP
    result : JSON
    error_message : TEXT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "system_logs" as system_logs {
    * **id** : SERIAL <<PK>>
    --
    robot_id : VARCHAR <<FK>>
    * log_type : VARCHAR(50)
    * level : VARCHAR(20)
    * message : TEXT
    details : JSON
    source : VARCHAR(100)
    * created_at : TIMESTAMP
}

' Relationships
robots ||--o{ alerts : "triggers"
robots ||--o{ alert_thresholds : "has"
robots ||--o{ reports : "subject of"
robots ||--o{ jobs : "scheduled for"
robots ||--o{ system_logs : "generates"

@enduml
